<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="@dimen/marginTopBase"
        android:text="@string/titulo"
        android:textSize="@dimen/tamanioTitulo"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtNombreArtista"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
        <EditText
            android:id="@+id/etNombreArtista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtFechaEvento"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
        <EditText
            android:id="@+id/etPlannedDate"
            android:hint="@string/report_planned_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:focusable="false">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtGeneroMusical"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>

        <Spinner
            android:id="@+id/spGeneroMusical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <!--android:entries="@array/GeneroMusical"-->
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtValorEntrada"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
        <EditText
            android:id="@+id/etValorEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/txtCalificacion"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>

        <Spinner
            android:id="@+id/spCalificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <!--android:entries="@array/Calificacion"-->
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/btnLimpiar"
            android:text="@string/limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">
        </Button>
    </LinearLayout>
    <ListView
        android:id="@+id/lvListaConcientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>